--- a/lab1.html
+++ b/lab1.html
@@ -15,7 +15,7 @@
     </header>
     <main class="main">
         <section class="profile-section">
-            <img src="assets/img/john-doe.jpg" alt="Опис картинки" class="profile-image">
+            <img src="assets/img/john-doe.jpg" alt="Опис картинки123" class="profile-image">
 
             <div class="profile-info">
                 <h3>John Doe</h3>
